feat: implementa filtragem de api-key